# tf-torch-linreg

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
tf-torch-linreg/: tf_linreg.ipynb  torch_linreg.ipynb
